Developer/src/objects/ContractCycle__c.object
<CustomObject>
    <fields>
        <fullName>CategNB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>カテゴリマスタ</label>
        <referenceTo>CategoryMaster__c</referenceTo>
        <relationshipLabel>コントラクトサイクル</relationshipLabel>
        <relationshipName>AAAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CategName__c</fullName>
        <formula>CategNB__r.CategName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>カテゴリ名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryNumberR__c</fullName>
        <formula>CategNB__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>カテゴリ番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chain__c</fullName>
        <label>実施チェーン</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ClientNB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>クライアントマスタ</label>
        <referenceTo>ClientMaster__c</referenceTo>
        <relationshipLabel>コントラクトサイクル</relationshipLabel>
        <relationshipName>ClientNB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientName__c</fullName>
        <formula>ClientNB__r.ClientName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>クライアント名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientNumberR__c</fullName>
        <formula>ClientNB__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>クライアント番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContNB__c</fullName>
        <label>コントラクト番号</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle__c</fullName>
        <label>サイクル</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpireDate__c</fullName>
        <label>有効期限日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImageNumber__c</fullName>
        <label>Image番号</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KikakuName__c</fullName>
        <label>企画名</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PPP__c</fullName>
        <label>PPP</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlanSheetFilePath__c</fullName>
        <label>PlanSheetFilePath</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintStartDate__c</fullName>
        <label>発券開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PrintStopDate__c</fullName>
        <label>発券終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProgramType__c</fullName>
        <label>プログラムタイプ</label>
        <picklist>
            <picklistValues>
                <fullName>メーカー</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>リテール</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesNo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>セールス番号</label>
        <referenceTo>SalesMaeter__c</referenceTo>
        <relationshipLabel>コントラクトサイクル</relationshipLabel>
        <relationshipName>SalesNo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>strExpireDate__c</fullName>
        <label>有効期限日文字列</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strPrintStartDate__c</fullName>
        <label>発券開始日文字列</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strPrintStopDate__c</fullName>
        <label>発券終了日文字列</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>コントラクトサイクル</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ContNB__c</columns>
        <columns>Cycle__c</columns>
        <columns>CategNB__c</columns>
        <columns>ClientNB__c</columns>
        <columns>SalesNo__c</columns>
        <columns>PrintStartDate__c</columns>
        <columns>PrintStopDate__c</columns>
        <columns>ExpireDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>PlansheetPrefix</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>